tests/compile-fail/semck/args-with-same-name.rs
fn foo(a: int, a: int) {}  //! ERROR(1:16): multiple parameters with name: `a`

fn main() {}